--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\paulo.bezerra\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31687343949.properties
+deploy.ant.properties.file=C:\\Users\\paulo.bezerra\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/paulo.bezerra/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.home=F:/Documents/apache-tomee-webprofile-7.1.2
+j2ee.server.instance=tomcat80:home=F:\\Documents\\apache-tomee-webprofile-7.1.2
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
